service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pes-frontend-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 4173
  selector:
    app: pes-frontend
